# omnigent

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
examples/codelens/: README.md  __init__.py  graph.py  main.py  profile.py  registries.py  tools.py
examples/codelens/knowledge/: complexity_cheatsheet.md
src/omnigent/: __init__.py  __main__.py  agent.py  chains.py  config.py  context.py  cost_tracker.py  domain_profile.py  error_recovery.py  extractors.py  few_shot_examples.py  knowledge_loader.py  logging_config.py  planner.py  plugins.py  reasoning_graph.py  reflection.py  registry.py  router.py  session.py  state.py
src/omnigent/knowledge/: README.md
src/omnigent/prompts/: system.md
src/omnigent/tools/: __init__.py
tests/: __init__.py  conftest.py  test_agent_e2e.py  test_agent_fixes.py  test_context.py  test_context_atomic.py  test_cost_tracker.py  test_domain_profile.py  test_planner.py  test_plugins.py  test_reasoning_graph.py  test_reasoning_graph_logic.py  test_registries.py  test_router_fixes.py  test_router_streaming.py  test_session.py  test_state.py  test_tools.py
