# Omnigent — Universal Autonomous Agent Framework
# Extracted from NumaSec v3.2.1 architecture
# Modern Python packaging (PEP 621)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnigent"
version = "0.1.0"
description = "Universal autonomous agent framework with ReAct loop, multi-provider LLM routing, reasoning graph, and MCP integration. Domain-agnostic scaffold for building specialized AI agents."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Francesco Stabile" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
keywords = [
    "agent",
    "ai-agent",
    "llm",
    "react-loop",
    "autonomous-agent",
    "mcp",
    "framework",
    "deepseek",
    "claude",
    "openai",
]

[project.urls]
Homepage = "https://github.com/francescostabile/omnigent"
Documentation = "https://github.com/francescostabile/omnigent#readme"
Repository = "https://github.com/francescostabile/omnigent"
Issues = "https://github.com/francescostabile/omnigent/issues"
Changelog = "https://github.com/francescostabile/omnigent/blob/main/CHANGELOG.md"

dependencies = [
    # CLI
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",

    # AI Providers (httpx used directly for streaming — no SDK needed)
    "httpx>=0.27.0",

    # Validation (Finding model, auto-enrichment)
    "pydantic>=2.6.0",

    # Utilities
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.26.0",
]
secure = [
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
]
all = [
    "omnigent[mcp]",
    "omnigent[secure]",
]

[project.scripts]
omnigent = "omnigent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omnigent"]
include = [
    "src/omnigent/**/*.md",
    "src/omnigent/**/*.txt",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

# ══════════════════════════════════════════════════════════════════════════════
# Tool Configuration
# ══════════════════════════════════════════════════════════════════════════════

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
